SyntacticAnalyzer/tests/fail/atributo03.java
class foo {
	// string no es un tipo primitivo valido, se toma como identificador
	var string s1;
}
